added vite and lng build configs

--- a/platforms/Tizen/www/index.html
+++ b/platforms/Tizen/www/index.html
@@ -21,6 +21,7 @@
     "useImageWorker": true
   },
   "debug": false,
+  "enablePointer": true,
   "name": "Lighting POC",
   "identifier": "com.diagnal.app.lightningpoc",
   "version": "1.0.0",
