--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body style="margin:0px">
-  <script src="./src/index.ts" type="module"></script>
+  <script src="./src/index.vite.ts" type="module"></script>
 </body>
 
 </html>
